Fixing broken styles

--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -98,16 +98,16 @@ body.dark {
   padding-top: 5px;
 }
 .header .home {
-  display: inline-block;
   position: absolute;
-  top: 3px;
+  top: 0px;
   left: 50%;
-  margin-left: -50px;
+  margin-left: -46px;
 }
 .header .home img {
   height: 18px;
   width: 92px;
   opacity: 0.6;
+  vertical-align: middle;
 }
 .header .accountLinks {
   display: inline-block;
